src/assets/scss/main.scss
@import "easings";
@import 'bootstrap/bootstrap-reboot';
@import 'bootstrap/bootstrap-grid';

@mixin make-container-fluid($gutters: $grid-gutter-widths) {
  @each $breakpoint in map-keys($gutters) {
    @include media-breakpoint-up($breakpoint) {
      $gutter: map-get($gutters, $breakpoint);
      padding-right: calc(4.16667% + #{$gutter / 2});
      padding-left:  calc(4.16667% + #{$gutter / 2});
    }
  }
}

h1, h2, h3, h4,
.h1, .h2, .h3, .h4 {
  margin-bottom: $headings-margin-bottom;
  text-transform: uppercase;
}

h1, .h1 {
  font-size: $font-size-h1;
  line-height: 1.36667;
  letter-spacing: .06667em;
  font-weight: $font-weight-heavy;
  color: $brand-primary;
  margin-bottom: 1em;
}

h2, .h2 {
  font-size: $font-size-h2;
  line-height: 1.36364;
  letter-spacing: .06682em;
  font-weight: $font-weight-heavy;
  color: $body-color;
}

h3, .h3 {
  font-size: $font-size-h3;
  line-height: 1.388889;
  letter-spacing: .06667em;
  font-weight: $font-weight-bold;
  color: $brand-primary;
}

h4, .h4 {
  font-size: $font-size-h4;
  line-height: 1.16667;
  letter-spacing: .04467em;
  font-weight: $font-weight-bold;
  color: $body-color;
}

nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }
}

.container-fluid {
  @include media-breakpoint-down(xl) {
    width: 91.66667%
  }
  @include media-breakpoint-only(xxl) {
    width: 75%
  }

  $fluid-grid-gutter-widths: (
    xs: 15px,
    sm: 15px,
    md: 25px,
    lg: 30px,
    xl: 35px,
    xxl: 50px
  );
  @include make-container-fluid($fluid-grid-gutter-widths)
}

ul.row {
  padding: 0;
  list-style: none;

  > li {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
}

.animation-wrapper {
  overflow-x: hidden;

  > .animated {
    transform: translateX(-120%);
    transition: transform .4s ease-out;

    // .run triggers animation
    .run & {
      transform: translateX(0) !important;
    }

    // Right aligned text (contact)
    &.mirrored {
      @include media-breakpoint-up(md) {
        text-align: right;
        transform: translateX(120%);
      }
    }

    // Hovering support (contact)
    &.onhover {
      @include hover-focus {
        transform: translateX(0);
      }
    }
  }
}

// Body animation
.body.animation-wrapper {
  > * {
    opacity: 0;
    transform: translateX(-100%);
    transition: .4s ease-out;
    transition-property: opacity, transform;
    transition-delay: .6s;

    // .run triggers animation
    .run & {
      opacity: 1;
      transform: translateX(0);
    }
  }
}

// Image animation
.image.animation-wrapper {
  background-color: $gray-bg;

  img {
    transform: translateX(-100%);
    transition: transform .4s ease-out;
  }

  &.run img {
    transform: translateX(0);
  }
}

a.animated,
button.animated {
  position: relative;
  display: inline-block;
  transform: translateX(50%);
  transition: color .15s ease-out 0s;

  &:after {
    content: "";
    position: absolute;
    width: calc(100% + 1rem);
    height: 1.5em;
    background-color: $link-color;
    z-index: -1;
    transition: transform .2s ease-out;
    transform-origin: right center;

    // Scale bar according to viewport width
    transform: translateX(-200%) scaleY(.22727);
    @include media-breakpoint-down(sm) {
      transform: translateX(-200%) scaleX(.75) scaleY(.22727);
    }
    @include media-breakpoint-up(lg) {
      transform: translateX(-200%) scaleY(.22727);
    }
  }

  @include hover-focus {
    color: $white;
    transition: color .166s ease-out .034s;

    &:after {
      transform: translateX(calc(-100% + .5rem)) scaleX(1) scaleY(1);
    }
  }
}

.node {
  padding-top: 4rem;
}

// Hide video controls
// See https://css-tricks.com/custom-controls-in-html5-video-full-screen
video::-webkit-media-controls {
  display:none !important;
}

.bg-video {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;

  video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    transform: translateX(-50%) translateY(-50%);
    background-repeat: no-repeat;
    background-size: cover;
    object-fit: cover;
  }

  ~ .container {
    // Prevent flickering in some browsers
    // See http://stackoverflow.com/a/36671466/1081396
    transform: translate3d(0,0,0);
  }
}

.bg-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
}

// Iframes
iframe {
  max-width: 100%;
  @include media-breakpoint-down(sm) {
    height: auto;
  }
}

.text {
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  li {
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 2em;
    text-indent: -1.4em;
  }

  li:before {
    content: "•";
    padding-right: 1em;
    color: $brand-primary;
  }
}

// Transitions
.fade-enter-active, .fade-leave-active {
  transition: opacity .5s;
}
.fade-enter, .fade-leave-to {
  opacity: 0;
}

.fade-enter-active.delay {
  transition-delay: 2s;
}

// Approach explanation
.approach-explanation {
  display: flex;
  align-items: center;
  margin-top: 3rem;
  margin-bottom: 1rem;

  @include media-breakpoint-down(sm) {
    display: none;
  }

  .title {
    font-weight: $font-weight-bold;
    font-size: 1.28571rem;
    line-height: 1.38889;
    letter-spacing: .06667em;
    color: $brand-primary;
    margin-right: 3rem;
  }

  .line {
    width: 25%;
    height: 4px;
    background-color: $gray-bg;
    margin-right: 2rem;
    margin-top: .25rem;
  }

  .explanation {
    font-size: 1.14285rem;
    line-height: 1.375;
    letter-spacing: .083125em;
    text-transform: uppercase;

    p {
      margin: .25rem 0;
    }
  }
}

